--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,6 @@ serde_json = "1.0"
 serde_derive = "1.0"
 rand = "0.8.5"
 clap = { version = "3.1.6", features = ["derive"] }
+itertools = "0.10.3"
+csv = "1.1"
  
