--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ clap = { version = "3.1.6", features = ["derive"] }
 itertools = "0.10.3"
 csv = "1.1"
 lexical-sort = "0.3.1"
+rayon = "1.5.1"
+indicatif = "0.16.2"
